# flatdict

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  changed-files-spec.yml  copilot-instructions.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: 01-feature-request.yml  02-bug-report.yml  03-documentation.yml  config.yml
.github/release-templates/.components/: changelog_4.0.4.rst.j2  changelog_init.rst.j2
.github/workflows/: ci.yml  cicd.yml  manual-docs-publish.yml  manual.yml  stale.yml  validate.yml
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/api/modules/: FlatDict.rst  FlatterDict.rst
docs/source/concepts/: index.rst  installation.rst  quick_reference.rst
docs/source/concepts/examples/: flatdict_examples.rst  flatterdict_examples.rst  index.rst
docs/source/contributing/: index.rst
docs/source/misc/: code_of_conduct.rst  faq.rst  security_policy.rst
scripts/: build.sh  build_docs.sh  dev_setup.sh  envsubst_version.py  utils.sh  watch_docs.sh
src/cj365/flatdict/: __init__.py  flat_dict.py  flatter_dict.py
tests/: eval_old_python.py  flatdict_test.py  flatterdict_test.py
