[project]
name = "cj365-flatdict"
version = "4.0.4"
description = "Python module for interacting with nested dicts as a single level dict with delimited keys."
requires-python = "~= 3.9"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "codejedi365", email = "codejedi365+flatdictpy@gmail.com" },
    { name = "Dennis Henry", email = "auruspex@gmail.com" },
    { name = "Gavin M. Roy", email = "gavinmroy@gmail.com" },
]
maintainers = [{ name = "codejedi365", email = "codejedi365+flatdictpy@gmail.com" }]
dependencies = [
    "Deprecated ~= 1.3",
]


[project.urls]
changelog = "https://codejedi365.github.io/flatdict/misc/changelog.html"
documentation = "https://codejedi365.github.io/flatdict"
homepage = "https://codejedi365.github.io/flatdict"
issues = "https://github.com/codejedi365/flatdict/issues"
repository = "https://github.com/codejedi365/flatdict.git"


[build-system]
requires = ["setuptools ~= 82.0", "wheel ~= 0.46.3"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
build = [
    "build ~= 1.2",
    "tomlkit ~= 0.14.0",
]
dev = [
    "mypy == 1.17.0",
    "ruff == 0.15.0",
    "types-Deprecated ~= 1.3",
]
docs = [
    "furo ~= 2025.9",
    "Sphinx ~= 7.4",
    "sphinx-autobuild == 2024.2.4",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-lint ~= 1.0.2",
]
test = [
    "pytest ~= 8.3",
    "pytest-clarity ~= 1.0",
    "pytest-cov >= 5.0.0, < 7.0.0",
    "pytest-env ~= 1.0",
    "pytest-order ~= 1.3",
    "pytest-pretty ~= 1.2",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
env = [
  "PYTHONHASHSEED = 100000"
]
addopts = [
  "-ra",
  "--diff-symbols",
  "--durations=5",
]
python_files = "*_test.py"
testpaths = ["tests"]


[tool.semantic_release]
add_partial_tags = false
logging_use_named_masks = true
commit_parser = "conventional"
commit_parser_options = { parse_squash_commits = true, ignore_merge_commits = true }
commit_message = """\
chore: release v{version}

Automatically generated by python-semantic-release
"""
build_command = "bash scripts/build.sh"
version_variables = []
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial Commit.*''',
]
insertion_flag = "=========\nCHANGELOG\n========="
mode = "update"
template_dir = ".github/release-templates"

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.branches.alpha]
match = "^(feat|fix|perf)/.+"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.branches.dev]
match = ".+"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
